--- a/Assignment 3/coolbox.css
+++ b/Assignment 3/coolbox.css
@@ -1,5 +1,42 @@
-html {
-  font-family: sans-serif;
+body {
+  margin: 0;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-/* Your CSS below here */
+.cool-box {
+  width: 300px;
+  height: 200px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+
+
+  font-size: 1.1rem;
+  
+
+  background-color: #ff1a1a; 
+  color: #fff;
+  text-shadow: 2px 2px 3px black;
+
+  border-radius: 15px;
+  border: 1px solid #cc0000;
+
+  
+  background-image: linear-gradient(
+    to bottom right,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.2) 30%,
+    rgba(0, 0, 0, 0.2) 100%
+  );
+
+
+  box-shadow:
+    5px 8px 12px rgba(0, 0, 0, 0.6),
+    inset 2px 2px 5px rgba(255, 255, 255, 0.3), 
+    inset -3px -3px 5px rgba(0, 0, 0, 0.3); 
+}
