--- a/Assignment 3/college.css
+++ b/Assignment 3/college.css
@@ -43,3 +43,130 @@ header, footer {
 }
 
 /* WRITE YOUR CODE BELOW HERE */
+@font-face {
+  font-family: 'Josefin Sans';
+  src: url('fonts/JosefinSans-Regular.woff2') format('woff2'),
+       url('fonts/JosefinSans-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+@font-face {
+  font-family: 'Crimson Pro';
+  src: url('fonts/CrimsonPro-Regular.woff2') format('woff2'),
+       url('fonts/CrimsonPro-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+html {
+  font-size: 10px;
+}
+
+body {
+  font-family: 'Crimson Pro', serif;
+  font-size: 1.4rem;
+  line-height: 1.6;
+  letter-spacing: 0.3px;
+  word-spacing: 1px;
+  color: #222;
+}
+
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Josefin Sans', sans-serif;
+  letter-spacing: 1px;
+}
+
+h1 {
+  font-size: 4rem;
+  text-align: center;
+  margin-bottom: 1.5rem;
+}
+
+h2 {
+  font-size: 2.4rem;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
+
+section > h2 + p {
+  text-indent: 20px;
+}
+
+
+a:link,
+a:visited {
+  color: #a66;
+  text-decoration: underline;
+}
+
+a:hover,
+a:focus {
+  text-decoration: none;
+}
+
+a:active {
+  color: white;
+  background-color: #a66;
+}
+
+a:focus {
+  outline: none;
+}
+
+
+a[href^="http"]:after {
+  content: url('external-link-52.png'); 
+  margin-left: 5px;
+  vertical-align: middle;
+}
+
+ul, ol {
+  margin: 1rem 0;
+  padding-left: 2rem;
+}
+
+li {
+  line-height: 1.6;
+  list-style-type: square;
+}
+
+
+nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+nav ul li {
+  margin-bottom: 1rem;
+}
+
+nav ul a {
+  display: block;
+  padding: 12px 0;
+  border: 1px solid #a66;
+  text-align: center;
+  background-color: white;
+  color: #a66;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1.6rem;
+  transition: all 0.2s ease;
+  border-radius: 2px;
+}
+
+nav ul a:hover {
+  background-color: #a66;
+  color: white;
+}
+
+footer {
+  text-align: center;
+  color: #666;
+  font-size: 1.2rem;
+}
